Implement refund and dispute handling with associated database entities and services